// Copyright 2020 The Google Research Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// ProtoBestPractices: ignore

syntax = "proto2";

package automl_zero;

import "third_party/google_research/google_research/automl_zero/definitions.proto";
import "third_party/google_research/google_research/automl_zero/fec_cache.proto";
import "third_party/google_research/google_research/automl_zero/train_budget.proto";

enum FitnessCombinationMode {
  UNKNOWN_FITNESS_COMBINATION = 0;
  MEAN_FITNESS_COMBINATION = 1;
  MEDIAN_FITNESS_COMBINATION = 3;
}

// Stores the entire configuration of an experiment.
message ExperimentSpec {
  // Allowed ops in each of the component_function. To prevent evolving one
  // component_function, leave the list of ops as empty.
  repeated Op setup_ops = 34;
  repeated Op imagine_ops = 42;
  repeated Op predict_ops = 35;
  repeated Op learn_ops = 36;

  // Training budget. If omitted, no training budget is imposed.
  optional TrainBudgetSpec train_budget = 3;

  // If not present, cache is disabled.
  // TODO(ereal): rename to FEC or something like that.
  optional FECCacheSpec fec_cache = 2;

  optional FitnessCombinationMode fitness_combination_mode = 1
      [default = MEAN_FITNESS_COMBINATION];

  // The population size that should be used by workers that have this dataset.
  // Should the same worker have contradicting values, the code will crash.
  // For each worker, at least one of the datasets must have this field set.
  optional int64 local_population_size = 33;
}
